fix: pace padding -> flickering effekt behoben

--- a/bin/css/style.css
+++ b/bin/css/style.css
@@ -12,7 +12,9 @@ Neon Purple: #993CF3
 
 html {
     box-sizing: border-box;
+    margin: 0;
     min-height: 100vh;
+    padding: 0;
     width: 100%;
 }
 
@@ -27,7 +29,9 @@ html {
 body {
     background: #fafafa;
     max-width: 100%;
+    margin: 0;
     min-height: 100vh;
+    padding: 0;
     width: 100% !important;
 }
 
